--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 		<title>Alexander Hems - Backend-Entwickler</title>
+		<style rel="stylesheet" href="_css/main.css" type="text/css"></style>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
