--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<title>Alexander Hems - Backend-Entwickler</title>
-		<style rel="stylesheet" href="_css/main.css" type="text/css"></style>
+		<link rel="stylesheet" href="_css/main.css" type="text/css">
 </head>
 <body>
 	<h1>Hello World</h1>
