some html5 feature added ^^

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>Alexander Hems - Backend-Entwickler</title>
-		<link rel="stylesheet" href="src/css/main.css" type="text/css">
+		<link rel="import" href="fragments/head.html">
 </head>
 <body>
 	<h1>Hello World</h1>
