fix import path :/

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<link rel="import" href="../fragments/head.html">
+		<link rel="import" href="../../fragments/head.html">
 </head>
 <body>
 	<h1>Hello World</h1>
