add some jekyll logic

--- a/showcase/project-1/index.html
+++ b/showcase/project-1/index.html
@@ -4,7 +4,6 @@
 		<link rel="import" href="../../fragments/head.html">
 </head>
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<h1>Project-1 Only Test</h1>
 </body>
 </html>
