--- a/showcase/index.html
+++ b/showcase/index.html
@@ -1,10 +1,12 @@
+---
+layout: page
+---
 <!DOCTYPE html>
 <html>
-<head>
-		<link rel="import" href="../fragments/head.html">
-</head>
+
+{% include head.html %}
+
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
 </body>
+
 </html>
