--- a/showcase/project-1/index.html
+++ b/showcase/project-1/index.html
@@ -1,9 +1,12 @@
+---
+layout: page
+---
 <!DOCTYPE html>
 <html>
-<head>
-		<link rel="import" href="../../fragments/head.html">
-</head>
+
+{% include head.html %}
+
 <body>
-	<h1>Project-1 Only Test</h1>
 </body>
+
 </html>
