--- a/showcase/project-1/index.html
+++ b/showcase/project-1/index.html
@@ -1,5 +1,4 @@
 ---
-layout: page
 ---
 <!DOCTYPE html>
 <html>
@@ -7,6 +6,8 @@ layout: page
 {% include head.html %}
 
 <body>
+  <a href="..">back</a>
+    <h1>Project-1</h1>
 </body>
 
 </html>
