--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
-layout: page
 ---
 <!DOCTYPE html>
 <html>
@@ -8,6 +7,7 @@ layout: page
 <body>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
+	<a href="showcase">Go to Showcase</a>
 </body>
 
 </html>
