big commit coming -add Bootstrap -add include splitting body, head, footer -fix styling -add sticky footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 ---
 <!DOCTYPE html>
 <html>
-{% include head.html %}
-
-<body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	<a href="showcase">Go to Showcase</a>
-</body>
-
+{% include head.html  %}
+{% include mainBody.html %}
 </html>
