- add project pages - add more styling

--- a/showcase/project-1/index.html
+++ b/showcase/project-1/index.html
@@ -1,13 +1,9 @@
 ---
+file: project1
+title : Project 1
 ---
 <!DOCTYPE html>
 <html>
-
 {% include head.html %}
-
-<body>
-  <a href="..">back</a>
-    <h1>Project-1</h1>
-</body>
-
+{% include projectOneBody.html %}
 </html>
